# Invariable-Docs

./: .env.example  .gitignore  INTERVIEW_REVISION_GUIDE.md  LICENSE  README.md  pyproject.toml
assets/: AI_Engineering_Portfolio_PRDs.docx
src/invariable_docs/: __init__.py  config.py
src/invariable_docs/api/: main.py  schemas.py
src/invariable_docs/eval/: __init__.py  golden_dataset.json  ragas_evaluator.py  regression_runner.py
src/invariable_docs/generation/: __init__.py  engine.py  prompts.py
src/invariable_docs/ingestion/: __init__.py  chunkers.py  cleaner.py  parser.py  pipeline.py
src/invariable_docs/providers/: __init__.py  base.py  factory.py
src/invariable_docs/providers/embeddings/: __init__.py  local_bge_provider.py
src/invariable_docs/providers/llm/: __init__.py  litellm_provider.py  ollama_provider.py
src/invariable_docs/providers/rerankers/: __init__.py  local_bge_reranker.py
src/invariable_docs/providers/vector_stores/: __init__.py  qdrant_provider.py
src/invariable_docs/retrieval/: __init__.py  bm25_index.py  hybrid_engine.py  transformations.py
ui/: streamlit_app.py
