[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invariable-docs"
version = "0.1.0"
description = "Enterprise-grade Hybrid-Search RAG Knowledge Assistant with Plug-and-Play Provider Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "AI Engineering Cohort", email = "developer@invariable.ai" }
]
keywords = ["rag", "hybrid-search", "llm", "agents", "ragas", "evaluation", "apple-silicon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Backend & API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",

    # Document Parsing & Ingestion
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "tiktoken>=0.6.0",

    # Hybrid Search & Vector DBs
    "rank-bm25>=0.2.2",
    "qdrant-client>=1.8.0",
    "sentence-transformers>=2.6.0",
    "FlagEmbedding>=1.2.9",
    "torch>=2.2.0",
    "numpy>=1.26.0",

    # LLM Providers & Abstractions
    "ollama>=0.1.7",
    "litellm>=1.34.0",
    "openai>=1.14.0",
    "anthropic>=0.21.0",
    "cohere>=4.51.0",

    # Evaluation & Observability
    "ragas>=0.1.4",
    "deepeval>=0.21.0",
    "langfuse>=2.21.0",

    # UI Dashboard
    "streamlit>=1.32.0",
    "altair>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/invariable_docs"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
